--- a/cause.html
+++ b/cause.html
@@ -25,45 +25,51 @@
       <div class="container">
         <h2>Nguyên Nhân Của Sốt Xuất Huyết</h2>
 
-        <div class="page-section">
-          <h3>Tác Nhân Gây Bệnh - Virus Dengue</h3>
-          <p>
-            Sốt xuất huyết được gây ra bởi virus dengue, một virus RNA nhỏ thuộc
-            họ Flaviviridae. Virus này có kích thước khoảng 40-60 nm và chứa một
-            bộ gene gồm khoảng 11,000 cơ sở nucleotide.
-          </p>
-          <p>Có 4 chủng virus dengue khác nhau:</p>
-          <ul>
-            <li>
-              <strong>DENV-1:</strong> Lần đầu tiên được xác định vào những năm
-              1940
-            </li>
-            <li><strong>DENV-2:</strong> Gây ra các ca bệnh nặng hơn</li>
-            <li><strong>DENV-3:</strong> Phân bố rộng ở Đông Nam Á</li>
-            <li><strong>DENV-4:</strong> Ít gặp nhưng cũng lây nhiễm được</li>
-          </ul>
+        <div class="page-section virus-section">
+          <div class="virus-image">
+            <img src="image/virus.png" alt="Virus Dengue" />
+          </div>
+
+          <div class="virus-content">
+            <h3>Tác Nhân Gây Bệnh - Virus Dengue</h3>
+            <p>
+              Sốt xuất huyết được gây ra bởi virus dengue, một virus RNA nhỏ
+              thuộc họ Flaviviridae. Virus này có kích thước khoảng 40-60 nm và
+              chứa một bộ gene gồm khoảng 11,000 cơ sở nucleotide.
+            </p>
+            <p>Có 4 chủng virus dengue khác nhau:</p>
+            <ul>
+              <li>
+                <strong>DENV-1:</strong> Lần đầu tiên được xác định vào những
+                năm 1940
+              </li>
+              <li><strong>DENV-2:</strong> Gây ra các ca bệnh nặng hơn</li>
+              <li><strong>DENV-3:</strong> Phân bố rộng ở Đông Nam Á</li>
+              <li><strong>DENV-4:</strong> Ít gặp nhưng cũng lây nhiễm được</li>
+            </ul>
+          </div>
         </div>
 
-        <div class="page-section">
-          <h3>Phương Thức Lây Truyền</h3>
-          <p>
-            <strong>Đốt muỗi:</strong> Virus dengue chủ yếu được truyền qua đốt
-            của muỗi cái Aedes aegypti (muỗi vằn). Muỗi cái cần máu để sản xuất
-            trứng, và trong quá trình hút máu, virus có thể được truyền từ người
-            bệnh sang người khỏe.
-          </p>
-          <p><strong>Quá trình lây nhiễm chi tiết:</strong></p>
-          <ol style="margin-left: 20px">
-            <li>Muỗi đốt người bệnh và hút máu có chứa virus</li>
-            <li>
-              Virus phát triển trong ruột muỗi trong 8-12 ngày (thời gian ủ
-              bệnh)
-            </li>
-            <li>Virus di chuyển đến tuyến nước bọt của muỗi</li>
-            <li>
-              Muỗi đốt một người khỏe mạnh, truyền virus thông qua nước bọt
-            </li>
-          </ol>
+        <div class="transmission-section">
+          <div class="transmission-content">
+            <h3>Phương Thức Lây Truyền</h3>
+            <p>
+              <strong>Đốt muỗi:</strong> Virus dengue chủ yếu được truyền qua
+              đốt của muỗi cái Aedes aegypti (muỗi vằn)...
+            </p>
+
+            <p><strong>Quá trình lây nhiễm chi tiết:</strong></p>
+            <ol>
+              <li>Muỗi đốt người bệnh và hút máu có chứa virus</li>
+              <li>Virus phát triển trong ruột muỗi trong 8-12 ngày</li>
+              <li>Virus di chuyển đến tuyến nước bọt của muỗi</li>
+              <li>Muỗi đốt người khỏe mạnh và truyền virus</li>
+            </ol>
+          </div>
+
+          <div class="transmission-image">
+            <img src="image/muoi.png" alt="Muỗi truyền bệnh" />
+          </div>
         </div>
 
         <div class="info-box">
@@ -89,22 +95,33 @@
           </p>
         </div>
 
-        <div class="page-section">
-          <h3>Các Yếu Tố Thuận Lợi Cho Sự Lây Lan</h3>
-          <ul>
-            <li>
-              <strong>Khí hậu ấm áp:</strong> Nhiệt độ 25-30°C lý tưởng cho phát
-              triển virus
-            </li>
-            <li><strong>Độ ẩm cao:</strong> Giúp muỗi sống lâu hơn</li>
-            <li><strong>Mưa nhiều:</strong> Tạo nhiều nơi sản xuất muỗi</li>
-            <li><strong>Đô thị hóa:</strong> Tăng mật độ muỗi và người dân</li>
-            <li><strong>Vệ sinh kém:</strong> Tích nước sạch cho muỗi đẻ</li>
-            <li>
-              <strong>Tuyến giao thông phát triển:</strong> Virus lan rộng nhanh
-              chóng
-            </li>
-          </ul>
+        <div class="factors-section">
+          <div class="factors-content">
+            <h3>Các Yếu Tố Thuận Lợi Cho Sự Lây Lan</h3>
+            <ul>
+              <li>
+                <strong>Khí hậu ấm áp:</strong> Nhiệt độ 25-30°C lý tưởng cho
+                phát triển virus
+              </li>
+              <li><strong>Độ ẩm cao:</strong> Giúp muỗi sống lâu hơn</li>
+              <li><strong>Mưa nhiều:</strong> Tạo nhiều nơi sinh sản muỗi</li>
+              <li>
+                <strong>Đô thị hóa:</strong> Tăng mật độ muỗi và người dân
+              </li>
+              <li><strong>Vệ sinh kém:</strong> Tích nước sạch cho muỗi đẻ</li>
+              <li>
+                <strong>Tuyến giao thông phát triển:</strong> Virus lan rộng
+                nhanh chóng
+              </li>
+            </ul>
+          </div>
+
+          <div class="factors-image">
+            <img
+              src="image/where_muoi.png"
+              alt="Môi trường sinh sản của muỗi"
+            />
+          </div>
         </div>
       </div>
     </main>
