--- a/intro.html
+++ b/intro.html
@@ -25,13 +25,16 @@
       <div class="container">
         <h2>Giới Thiệu Về Sốt Xuất Huyết</h2>
 
+        <div class="image-intro">
+          <img src="image/what_is_xsh.png" alt="Hình minh họa sốt xuất huyết" />
+        </div>
+
         <div class="page-section">
           <h3>Khái Niệm Chung</h3>
           <p>
-            Sốt xuất huyết là một bệnh viral lây truyền qua côn trùng, được gây
-            ra bởi virus dengue. Bệnh này được truyền chủ yếu qua đốt của muỗi
-            cái Aedes aegypti và Aedes albopictus. Muỗi Aedes aegypti thường
-            hoạt động vào sáng sớm và chiều tối.
+            Sốt xuất huyết (Dengue Fever) là một bệnh lây truyền qua muỗi có thể
+            gây ra các biểu hiện từ nhẹ đến nặng. Bệnh được truyền bởi các con
+            muỗi Aedes, đặc biệt là muỗi Aedes aegypti.
           </p>
           <p>
             Bệnh được ghi nhận lần đầu tiên vào thế kỷ 18 ở Philadelphia và Bắc
@@ -48,7 +51,7 @@
             sốt xuất huyết mỗi năm, trong đó có khoảng 96 triệu ca bệnh rõ ràng.
           </p>
           <p>
-            Các vùng tropical và subtropical là những vùng có tỷ lệ lây nhiễm
+            Các vùng nhiệt đới và cận nhiệt đới là những vùng có tỷ lệ lây nhiễm
             cao nhất, đặc biệt là Đông Nam Á, Ấn Độ, Brazil và những khu vực
             khác có khí hậu ấm áp và ẩm ướt.
           </p>
