--- a/prevention.html
+++ b/prevention.html
@@ -53,19 +53,31 @@
         </div>
 
         <div class="page-section">
-          <h3>Kiểm Soát Muỗi Tại Nhà</h3>
-          <p>
-            <strong>Loại bỏ nơi sản xuất muỗi:</strong> Các con muỗi Aedes đẻ
-            trứng trong nước sạch. Kiểm tra và loại bỏ:
-          </p>
-          <ul>
-            <li>Bình chứa nước quanh nhà</li>
-            <li>Bể cảnh cá</li>
-            <li>Chum nước</li>
-            <li>Nước tích trên tầng mái</li>
-            <li>Rác thải, cốc, lon, hoặc bất kỳ vật chứa có nước</li>
-            <li>Dây xích cây, lỗ dẫn nước mưa</li>
-          </ul>
+          <div class="page-section">
+            <h3>Kiểm Soát Muỗi Tại Nhà</h3>
+
+            <div class="content-with-image">
+              <div class="text-content">
+                <p>
+                  <strong>Loại bỏ nơi sản xuất muỗi:</strong> Các con muỗi Aedes
+                  đẻ trứng trong nước sạch. Kiểm tra và loại bỏ:
+                </p>
+
+                <ul>
+                  <li>Bình chứa nước quanh nhà</li>
+                  <li>Bể cảnh cá</li>
+                  <li>Chum nước</li>
+                  <li>Nước tích trên tầng mái</li>
+                  <li>Rác thải, cốc, lon, hoặc bất kỳ vật chứa có nước</li>
+                  <li>Dây xích cây, lỗ dẫn nước mưa</li>
+                </ul>
+              </div>
+
+              <div class="image-content">
+                <img src="image/phong_benh.png" alt="Phòng bệnh" />
+              </div>
+            </div>
+          </div>
 
           <p>
             <strong>Thay nước thường xuyên:</strong> Nếu phải chứa nước, hãy
